save tokens into LocalStorage instead of ServiceWorker
