# api/api.yaml
@@ -55,6 +55,13 @@ paths:
       responses:
         201:
           description: Created
+          headers:
+            X-Session-Operation:
+              $ref: "#/components/headers/SessionOperation"
+            X-Access-Token:
+              $ref: "#/components/headers/AccessToken"
+            X-Refresh-Token:
+              $ref: "#/components/headers/RefreshToken"
           content:
             application/json:
               schema:
@@ -62,14 +69,8 @@ paths:
                 properties:
                   user:
                     $ref: "#/components/schemas/User"
-                  accessToken:
-                    type: string
-                  refreshToken:
-                    type: string
                 required:
                   - user
-                  - accessToken
-                  - refreshToken
         400:
           description: Bad Request
     put:
@@ -82,6 +83,13 @@ paths:
       responses:
         201:
           description: Created
+          headers:
+            X-Session-Operation:
+              $ref: "#/components/headers/SessionOperation"
+            X-Access-Token:
+              $ref: "#/components/headers/AccessToken"
+            X-Refresh-Token:
+              $ref: "#/components/headers/RefreshToken"
           content:
             application/json:
               schema:
@@ -89,14 +97,8 @@ paths:
                 properties:
                   user:
                     $ref: "#/components/schemas/User"
-                  accessToken:
-                    type: string
-                  refreshToken:
-                    type: string
                 required:
                   - user
-                  - accessToken
-                  - refreshToken
         401:
           description: Unauthorized
     delete:
@@ -109,6 +111,9 @@ paths:
       responses:
         204:
           description: No Content
+          headers:
+            X-Session-Operation:
+              $ref: "#/components/headers/SessionOperation"
         401:
           description: Unauthorized
 
@@ -163,6 +168,13 @@ paths:
       responses:
         201:
           description: Created
+          headers:
+            X-Session-Operation:
+              $ref: "#/components/headers/SessionOperation"
+            X-Access-Token:
+              $ref: "#/components/headers/AccessToken"
+            X-Refresh-Token:
+              $ref: "#/components/headers/RefreshToken"
           content:
             application/json:
               schema:
@@ -170,14 +182,8 @@ paths:
                 properties:
                   user:
                     $ref: "#/components/schemas/User"
-                  accessToken:
-                    type: string
-                  refreshToken:
-                    type: string
                 required:
                   - user
-                  - accessToken
-                  - refreshToken
         400:
           description: Bad Request
         409:
@@ -388,6 +394,27 @@ components:
       required:
         - id
         - post
+
+  headers:
+    AccessToken:
+      description: JWT Access Token
+      required: true
+      schema:
+        type: string
+    RefreshToken:
+      description: JWT Refresh Token
+      required: true
+      schema:
+        type: string
+    SessionOperation:
+      description: Operation type for lifecycle of session.
+      required: true
+      schema:
+        type: string
+        enum:
+          - created
+          - refreshed
+          - revoked
 
   securitySchemes:
     AccessToken:
