# backend/src/app/controller/Session/createSession.ts
@@ -37,11 +37,16 @@ export const createSession = defineRoute(
       const accessTokenJwt = await serverKey.signToken(accessToken);
       const refreshTokenJwt = await serverKey.signToken(refreshToken);
 
-      return await reply.status(201).send({
-        user: serializeUser(authentication.user),
-        accessToken: accessTokenJwt,
-        refreshToken: refreshTokenJwt,
-      });
+      return await reply
+        .status(201)
+        .headers({
+          "X-Session-Operation": "created",
+          "X-Access-Token": accessTokenJwt,
+          "X-Refresh-Token": refreshTokenJwt,
+        })
+        .send({
+          user: serializeUser(authentication.user),
+        });
     },
   })
 );
