# backend/src/app/controller/Session/deleteSession.ts
@@ -4,6 +4,11 @@ import { defineRoute } from "../defineRoute.js";
 export const deleteSession = defineRoute(() => ({
   ...operations.deleteAuthentication,
   handler: async (req, reply) => {
-    return await reply.status(204).send();
+    return await reply
+      .status(204)
+      .headers({
+        "X-Session-Operation": "revoked",
+      })
+      .send();
   },
 }));
